# dreamhack_web3

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
dreamhack_utils/: Cargo.toml
dreamhack_utils/src/: forge.rs  lib.rs
dreamhack_utils/src/challenge/: info.rs
dreamidle/d57663bc-4e7c-46f2-ab45-2cf04ff7a47a/: Dockerfile
dreamidle/d57663bc-4e7c-46f2-ab45-2cf04ff7a47a/deploy/: DreamIdle.sol  config.yaml  verifier.py
dreamidle/d57663bc-4e7c-46f2-ab45-2cf04ff7a47a/dreamidle/: Cargo.toml
dreamidle/d57663bc-4e7c-46f2-ab45-2cf04ff7a47a/dreamidle/src/: main.rs
erc1337/: takeaway.md
erc1337/deploy/: ERC1337.sol  ERC20.sol  config.yaml  verifier.py
erc1337/erc1337/: Cargo.toml
erc1337/erc1337/src/: main.rs
excellent_member/excellent_member/: Cargo.toml
excellent_member/excellent_member/src/: main.rs
excellent_member/f0d4b1ac-1458-44de-a340-f389f24a3ffc/deploy/: ExcellentMember.sol  Ownable.sol  config.yaml
safe_escrow/f5095b7b-16ba-4bce-8b94-7f53fb18533c/: Dockerfile
safe_escrow/f5095b7b-16ba-4bce-8b94-7f53fb18533c/circuit/: go.mod  go.sum  main.go
safe_escrow/f5095b7b-16ba-4bce-8b94-7f53fb18533c/deploy/: SafeEscrow.sol  config.yaml
sc_dreamhack_token_shop/deploy/: Contract.sol  config.yaml  verifier.py
sc_king_of_dreamhack/deploy/: Contract.sol  config.yaml  solution.sol  verifier.py
sc_make_boko_winner/deploy/: Contract.sol  config.yaml  verifier.py
sc_make_boko_winner/solver/: Cargo.toml  Solution.sol
sc_make_boko_winner/solver/src/: main.rs
sc_my_first_proxy_contract/: Dockerfile  solution.Sol
sc_my_first_proxy_contract/deploy/: Contract.sol  config.yaml  verifier.py
sc_nandos_private_safe/deploy/: Contract.sol  config.yaml  sol.py  verifier.py
sc_token_giveaway/deploy/: Contract.sol  solution.sol  verifier.py
sc_ultra_upgreadable_proxy/: solution.sol
sc_ultra_upgreadable_proxy/deploy/: Contract.sol  Sol.sol  config.yaml  verifier.py
